个人网站：更改封面。

--- a/personal website/index.html
+++ b/personal website/index.html
@@ -22,47 +22,53 @@
                     <span class="nbs"></span>
                 </div>
             </div>
-            <ul id="s-nav">
-                <li class="b-a"><a href="">关于我</a>
-                    <ul class="s-list">
-                        <li><a href="">性别：女</a></li>
-                        <li><a href="">爱好：唱歌</a></li>
-                        <li><a href="">自我评价</a></li>
-                    </ul>
-                </li>
-                <li class="b-a">
-                    <a href="">我的简历</a>
-                    <ul class="s-list">
-                        <li><a href="">学校</a></li>
-                        <li><a href="">奖项</a></li>
-                        <li><a href="">每年经历</a></li>
-                    </ul>
-                </li>
-                <li class="b-a">
-                    <a href="">我的作品</a>
-                    <ul class="s-list">
-                        <li><a href="">小米官网仿写</a></li>
-                        <li><a href="">旋转的照片墙</a></li>
-                        <li><a href="">vue小例子</a></li>
-                    </ul>
-                </li>
-                <li class="b-a">
-                    <a href="">我的技能</a>
-                    <ul class="s-list">
-                        <li><a href="">HTML\CSS</a></li>
-                        <li><a href="">JS\JQ</a></li>
-                        <li><a href="">PHP\NODE</a></li>
-                    </ul>
-                </li>
-                <li class="b-a">
-                    <a href="">联系我</a>
-                    <ul class="s-list">
-                        <li><a href="">Phone</a></li>
-                        <li><a href="">QQ\WeChat</a></li>
-                        <li><a href="">E-Mail</a></li>
-                    </ul>
-                </li>
-            </ul>
+            <div id="s-nav">
+                <div class="nav-decor-l nav-decor"></div>
+                <div class="nav-decor-r nav-decor"></div>
+                <div id="a-line"></div>
+                <ul id="ul-nav">
+                    <li class="b-a">
+                        <span class="l-span">关于我</span>
+                        <ul class="s-list">
+                            <li><a href="">性别：女</a></li>
+                            <li><a href="">爱好：唱歌</a></li>
+                            <li><a href="">自我评价</a></li>
+                        </ul>
+                    </li>
+                    <li class="b-a">
+                        <span class="l-span">我的简历</span>
+                        <ul class="s-list">
+                            <li><a href="">学校</a></li>
+                            <li><a href="">奖项</a></li>
+                            <li><a href="">每年经历</a></li>
+                        </ul>
+                    </li>
+                    <li class="b-a">
+                        <span class="l-span">我的作品</span>
+                        <ul class="s-list">
+                            <li><a href="">小米官网仿写</a></li>
+                            <li><a href="">旋转的照片墙</a></li>
+                            <li><a href="">博客仿写php-ci</a></li>
+                        </ul>
+                    </li>
+                    <li class="b-a">
+                        <span class="l-span">我的技能</span>
+                        <ul class="s-list">
+                            <li><a href="">HTML \ CSS</a></li>
+                            <li><a href="">JS \ JQ</a></li>
+                            <li><a href="">PHP \ NODE</a></li>
+                        </ul>
+                    </li>
+                    <li class="b-a">
+                        <span class="l-span">联系我</span>
+                        <ul class="s-list">
+                            <li><a href="">Phone \ E-mail \ QQ</a></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
 
         <!-- 标题-->
         <div id="title">
@@ -77,6 +83,7 @@
 
 </div>
 <!----------头结束--------------->
+<!--内容开始-->
     <div>
     <div id="nav">
         <ul>
@@ -354,6 +361,9 @@
     <div style="background: #f00;">1</div>
     <div>1</div>
 </div>
+<!--内容结束-->
+<!--尾部开始-->
+<!--尾部结束-->
 <script src="js/index.js"></script>
 </body>
 </html>
