--- a/personal website/index.html
+++ b/personal website/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-    <title>my home</title>
+    <title>my page</title>
     <link rel="stylesheet" href="css/iconfont.css">
     <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
@@ -71,14 +72,98 @@
             </div>
 
         <!-- 标题-->
-        <div id="title">
-                <h3>HI I am Hathaway&nbsp;</h3>
-                <h4>&nbsp;<a href="">Let's start !</a></h4>
-        </div>
+        <div class="main">
+            <div class="sidebar-hover">
+                <p class="pagination">
+                    <span class="page">01</span> / <span class="total-pages">05</span>
+                </p>
+            </div>
+            <div class="sidebar-real">
+                <div data-page="1" class="nav-elem nav-1 active"></div>
+                <div data-page="2" class="nav-elem nav-2"></div>
+                <div data-page="3" class="nav-elem nav-3"></div>
+                <div data-page="4" class="nav-elem nav-4"></div>
+                <div data-page="5" class="nav-elem nav-5"></div>
+            </div>
+            <div class="sections">
+                <div class="section section-1">
+                    <div class="left-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                    <div class="content">
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.4s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 1s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.9s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.7s;"></div>
+                        <div class="section-heading" style="margin-top: 0vh; display: block;">Hathaway Home-Page #1
+                            <p class="additional-text" style="margin-top: 0vh; display: block;">Some cool info or hashtags #1</p></div>
+                    </div>
+                </div>
+                <div class="section section-2">
+                    <div class="left-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                    <div class="content">
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.4s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 1s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.9s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.7s;"></div>
+                        <div class="section-heading" style="margin-top: 0vh; display: block;">Hathaway Home-Page #2
+                        <p class="additional-text" style="margin-top: 0vh; display: block;">Some cool info or hashtags #2</p></div>
+                    </div>
+                </div>
+                <div class="section section-3">
+                    <div class="left-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                    <div class="content">
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.4s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 1s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.9s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.7s;"></div>
+                        <div class="section-heading" style="margin-top: 0vh; display: block;">Hathaway Home-Page #3
+                        <p class="additional-text" style="margin-top: 0vh; display: block;">Some cool info or hashtags #3</p></div>
+                    </div>
+                </div>
+                <div class="section section-4">
+                    <div class="left-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                    <div class="content">
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.4s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 1s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.9s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.7s;"></div>
+                        <div class="section-heading" style="margin-top: 0vh; display: block;">Hathaway Home-Page #4
+                        <p class="additional-text" style="margin-top: 0vh; display: block;">Some cool info or hashtags #4</p></div>
+                    </div>
+                </div>
+                <div class="section section-5">
+                    <div class="left-part" style="margin-top: 0; transition-delay: 0.6s;"></div>
+                    <div class="content">
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.4s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 1s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.9s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.7s;"></div>
+                        <div class="section-heading" style="margin-top: 0vh; display: block;">Hathaway Home-Page #5
+                            <p class="additional-text" style="margin-top: 0vh; display: block;">Some cool info or hashtags #5</p></div>
 
-        <div class="arrow">
-            <span class="lt">&lt</span>
-            <span class="gt">&gt</span>
+                    </div>
+                </div>
+            </div>
+            <h2 class="scroll-down"><a href="javascript:;">Scroll down</a></h2>
         </div>
 
 </div>
@@ -91,7 +176,7 @@
             <li>Resume</li>
             <li>Services</li>
             <li>Skills</li>
-            <li>Clients</li>
+            <li>Contact</li>
         </ul>
     </div>
     <div id="part1">
@@ -354,7 +439,99 @@
             </div>
             <!-- *       part4 end       *-->
             <div class="dividing-line"></div>
+            <div class="wrapper">
+                <div class="t-part">
+                    <h4 class="who">INFORMATION</h4>
+                    <h3 class="about">CONTACT</h3>
+                    <div class="e-line"></div>
+                </div>
 
+                <footer class="viselem visfooter" style="opacity: 1;">
+
+
+                    <div class="container">
+                        <div class="row">
+
+                            <div class="col-md-4">
+                                <div id="custom_social_dewidget-1" class="widget footer-info spo-footer-widget text-left widget_custom_social_dewidget">
+                                    <h4 class="spo-footer-widget-title">Find me</h4>
+                                    <div class="footer-social">
+                                        <ul>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fa fa-facebook"></i>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fa fa-twitter"></i>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fa fa-google-plus"></i>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fa fa-skype"></i>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fa fa-linkedin"></i>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div id="custom_contact_dewidget-1" class="widget footer-info spo-footer-widget text-left widget_custom_contact_dewidget">
+                                    <h4 class="spo-footer-widget-title">Contact info</h4>
+                                    <ul class="footer-contacts">
+                                        <li>
+                                            <a href="#"><i class="fa fa-phone"></i> +7(111)123456789</a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="fa fa-motorcycle"></i> 27th Brooklyn New York.</a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="fa fa-envelope-o"></i> yourmail@domain.com</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div id="text-1" class="widget footer-info spo-footer-widget text-left widget_text">
+                                    <h4 class="spo-footer-widget-title">Bionick Demos</h4>
+                                    <div class="textwidget">
+                                        <ul class="footer-contacts">
+                                            <li><a href="#" target="_blank"><i class="fa fa-square-o"></i>Video Demo</a></li>
+                                            <li><a href="" target="_blank"><i class="fa fa-square-o"></i>Image Demo</a></li>
+                                            <li><a href="" target="_blank"><i class="fa fa-square-o"></i>Slider Demo</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--to top / privacy policy-->
+                    <div class="to-top-holder copyright">
+                        <div class="container">
+
+
+                            <p>&copy; BioNick 2015 Developed by <a href="" target="_blank">WebRedox</a> | All rights reserved.</p>
+
+
+                            <div class="to-top"> <i class="fa fa-angle-double-up"></i></div>
+                        </div>
+
+                    </div>
+                </footer>
+
+            </div>
         </div>
     </div>
     <div style="background: #f00;">1</div>
@@ -364,6 +541,9 @@
 <!--内容结束-->
 <!--尾部开始-->
 <!--尾部结束-->
+<script src="js/jquery-1.12.4.js"></script>
 <script src="js/index.js"></script>
+<script src="js/stopExecutionOnTimeout.js?t=1"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
