个人网站：更改内容。

--- a/personal website/index.html
+++ b/personal website/index.html
@@ -191,6 +191,7 @@
             <div class="wrapper">
                 <div class="t-part">
                     <h4 class="who">WHO I AM</h4>
+                    <div class="sect-subtitle" data-top-bottom="transform: translateY(-300px);" data-bottom-top="transform: translateY(300px);"><span>about</span></div>
                     <h3 class="about">ABOUT</h3>
                     <div class="e-line"></div>
                 </div>
@@ -233,6 +234,7 @@
             <div class="wrapper">
                 <div class="t-part">
                     <h4 class="who">MY BIO</h4>
+                    <div class="sect-subtitle" data-top-bottom="transform: translateY(-300px);" data-bottom-top="transform: translateY(300px);"><span>RESUME</span></div>
                     <h3 class="about">RESUME</h3>
                     <div class="e-line"></div>
                 </div>
@@ -257,6 +259,7 @@
             <div class="wrapper">
                 <div class="t-part">
                     <h4 class="who"> WHAT I DO</h4>
+                    <div class="sect-subtitle" data-top-bottom="transform: translateY(-300px);" data-bottom-top="transform: translateY(300px);"><span>Works</span></div>
                     <h3 class="about">WORKS</h3>
                     <div class="e-line"></div>
                 </div>
@@ -301,6 +304,7 @@
             <div class="wrapper">
                 <div class="t-part">
                     <h4 class="who">ATTAINMENTS</h4>
+                    <div class="sect-subtitle" data-top-bottom="transform: translateY(-300px);" data-bottom-top="transform: translateY(300px);"><span>Skills</span></div>
                     <h3 class="about">SKILLS</h3>
                     <div class="e-line"></div>
                 </div>
@@ -311,7 +315,7 @@
                                 <div class="piechart col-md-3">
                                             <span class="chart" data-percent="60">
                                                 <span class="percent">60</span>
-                                                <canvas height="300" width="300" style="height: 150px; width: 150px;"></canvas>
+                                                <canvas height="160" width="160"></canvas>
                                             </span>
                                     <div class="clearfix"></div>
                                     <div class="skills-description">
@@ -350,7 +354,7 @@
                                 <div class="piechart col-md-3">
                                             <span class="chart" data-percent="90">
                                                 <span class="percent">90</span>
-                                                <canvas height="300" width="300" style="height: 150px; width: 150px;"></canvas>
+                                                <canvas height="160" width="160"></canvas>
                                             </span>
                                     <div class="clearfix"></div>
                                     <div class="skills-description">
@@ -389,7 +393,7 @@
                                 <div class="piechart col-md-3">
                                             <span class="chart" data-percent="85">
                                                 <span class="percent">85</span>
-                                                <canvas height="300" width="300" style="height: 150px; width: 150px;"></canvas>
+                                                <canvas height="160" width="160"></canvas>
                                             </span>
                                     <div class="clearfix"></div>
                                     <div class="skills-description">
