个人网站：更改封面。

--- a/personal website/index.html
+++ b/personal website/index.html
@@ -182,9 +182,17 @@
     <div id="part1">
 
         <div id="l-part">
-            <h3>ABOUT<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ME</h3>
-            <div class="c-line"></div>
-            <div class="d-line"></div>
+            <div width="80vh" id="l-part2">
+                <h3>ABOUT<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ME</h3>
+                <div class="c-line"></div>
+                <div class="d-line"></div>
+                <img src="img/about1.png" alt="">
+                <!--<img src="img/about2.png" alt="">-->
+            </div>
+
+            <!--<img src="" alt="">-->
+            <!--<img src="" alt="">-->
+            <!--<img src="" alt="">-->
         </div>
         <div id="r-part">
             <!--*       part1 我            *-->
