个人网站：完善个人网站

--- a/personal website/index.html
+++ b/personal website/index.html
@@ -172,31 +172,35 @@
     <div>
     <div id="nav">
         <ul>
-            <li class="select">About</li>
-            <li>Resume</li>
-            <li>Services</li>
-            <li>Skills</li>
-            <li>Contact</li>
+            <li class="select"><a href="#w-about">About</a></li>
+            <li><a href="#b-io">Resume</a></li>
+            <li><a href="#do">Services</a></li>
+            <li><a href="#skill">Skills</a></li>
+            <li><a href="#cont">Contact</a></li>
         </ul>
     </div>
     <div id="part1">
 
         <div id="l-part">
             <div width="80vh" id="l-part2">
-                <h3>ABOUT<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ME</h3>
-                <div class="c-line"></div>
-                <div class="d-line"></div>
-                <img src="img/about1.png" alt="">
-                <!--<img src="img/about2.png" alt="">-->
-            </div>
+                <div>
 
-            <!--<img src="" alt="">-->
-            <!--<img src="" alt="">-->
-            <!--<img src="" alt="">-->
+                    <h3 id="l-title">ABOUT</h3>
+                    <div class="c-line"></div>
+                    <div class="d-line"></div>
+                </div>
+                <div id="vertical">
+                    <img src="img/about1.png" alt="">
+                    <img src="img/about2.png" alt="">
+                    <img src="img/about3.jpg" alt="">
+                    <img src="img/about4.jpg" alt="">
+                    <img src="img/about5.jpg" alt="">
+                </div>
+            </div>
         </div>
         <div id="r-part">
             <!--*       part1 我            *-->
-            <div class="wrapper">
+            <div class="wrapper" id="w-about">
                 <div class="t-part">
                     <h4 class="who">WHO I AM</h4>
                     <div class="sect-subtitle" data-top-bottom="transform: translateY(-300px);" data-bottom-top="transform: translateY(300px);"><span>about</span></div>
@@ -239,7 +243,7 @@
             <!--*       part1  end       *-->
         <div class="dividing-line"></div>
             <!--```````   part2 简历    ``````-->
-            <div class="wrapper">
+            <div class="wrapper" id="b-io">
                 <div class="t-part">
                     <h4 class="who">MY BIO</h4>
                     <div class="sect-subtitle" data-top-bottom="transform: translateY(-300px);" data-bottom-top="transform: translateY(300px);"><span>RESUME</span></div>
@@ -264,7 +268,7 @@
             <!-- *       part2 end       *-->
         <div class="dividing-line"></div>
             <!--```````   part3 项目    ``````-->
-            <div class="wrapper">
+            <div class="wrapper" id="do">
                 <div class="t-part">
                     <h4 class="who"> WHAT I DO</h4>
                     <div class="sect-subtitle" data-top-bottom="transform: translateY(-300px);" data-bottom-top="transform: translateY(300px);"><span>Works</span></div>
@@ -309,7 +313,7 @@
             <!-- *       part3 end       *-->
         <div class="dividing-line"></div>
             <!--```````   part4 能力    ``````-->
-            <div class="wrapper">
+            <div class="wrapper" id="skill">
                 <div class="t-part">
                     <h4 class="who">ATTAINMENTS</h4>
                     <div class="sect-subtitle" data-top-bottom="transform: translateY(-300px);" data-bottom-top="transform: translateY(300px);"><span>Skills</span></div>
@@ -441,7 +445,7 @@
             <!-- *       part4 end       *-->
         <div class="dividing-line"></div>
             <!--```````   part5 联系我    ``````-->
-            <div class="wrapper">
+            <div class="wrapper" id="cont">
                 <div class="t-part">
                     <h4 class="who">INFORMATION</h4>
                     <h3 class="about">CONTACT</h3>
