个人网站：完善个人网站。

--- a/personal website/index.html
+++ b/personal website/index.html
@@ -31,39 +31,39 @@
                     <li class="b-a">
                         <span class="l-span">关于我</span>
                         <ul class="s-list">
-                            <li><a href="">性别：女</a></li>
-                            <li><a href="">爱好：唱歌</a></li>
-                            <li><a href="">自我评价</a></li>
+                            <li><a href="#w-about">性别：女</a></li>
+                            <li><a href="#w-about">爱好：唱歌</a></li>
+                            <li><a href="#w-about">自我评价</a></li>
                         </ul>
                     </li>
                     <li class="b-a">
                         <span class="l-span">我的简历</span>
                         <ul class="s-list">
-                            <li><a href="">学校</a></li>
-                            <li><a href="">奖项</a></li>
-                            <li><a href="">每年经历</a></li>
+                            <li><a href="#b-io">学校</a></li>
+                            <li><a href="#b-io">奖项</a></li>
+                            <li><a href="#b-io">每年经历</a></li>
                         </ul>
                     </li>
                     <li class="b-a">
                         <span class="l-span">我的作品</span>
                         <ul class="s-list">
-                            <li><a href="">小米官网仿写</a></li>
-                            <li><a href="">旋转的照片墙</a></li>
-                            <li><a href="">博客仿写php-ci</a></li>
+                            <li><a href="#do">小米官网仿写</a></li>
+                            <li><a href="#do">旋转的照片墙</a></li>
+                            <li><a href="#do">博客仿写php-ci</a></li>
                         </ul>
                     </li>
                     <li class="b-a">
                         <span class="l-span">我的技能</span>
                         <ul class="s-list">
-                            <li><a href="">HTML \ CSS</a></li>
-                            <li><a href="">JS \ JQ</a></li>
-                            <li><a href="">PHP \ NODE</a></li>
+                            <li><a href="#skill">HTML \ CSS</a></li>
+                            <li><a href="#skill">JS \ JQ</a></li>
+                            <li><a href="#skill">PHP \ NODE</a></li>
                         </ul>
                     </li>
                     <li class="b-a">
                         <span class="l-span">联系我</span>
                         <ul class="s-list">
-                            <li><a href="">Phone \ E-mail \ QQ</a></li>
+                            <li><a href="#cont">Phone \ E-mail \ QQ</a></li>
                             <li></li>
                             <li></li>
                         </ul>
@@ -87,83 +87,83 @@
             </div>
             <div class="sections">
                 <div class="section section-1">
-                    <div class="left-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                    <div class="left-part"></div>
                     <div class="content">
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.4s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 1s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.9s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.7s;"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
                         <div class="section-heading" style="margin-top: 0vh; display: block;">Hathaway Home-Page #1
                             <p class="additional-text" style="margin-top: 0vh; display: block;">Some cool info or hashtags #1</p></div>
                     </div>
                 </div>
                 <div class="section section-2">
-                    <div class="left-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                    <div class="left-part"></div>
                     <div class="content">
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.4s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 1s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.9s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.7s;"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
                         <div class="section-heading" style="margin-top: 0vh; display: block;">Hathaway Home-Page #2
                         <p class="additional-text" style="margin-top: 0vh; display: block;">Some cool info or hashtags #2</p></div>
                     </div>
                 </div>
                 <div class="section section-3">
-                    <div class="left-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                    <div class="left-part"></div>
                     <div class="content">
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.4s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 1s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.9s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.7s;"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
                         <div class="section-heading" style="margin-top: 0vh; display: block;">Hathaway Home-Page #3
                         <p class="additional-text" style="margin-top: 0vh; display: block;">Some cool info or hashtags #3</p></div>
                     </div>
                 </div>
                 <div class="section section-4">
-                    <div class="left-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
+                    <div class="left-part"></div>
                     <div class="content">
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.4s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 1s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.9s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.7s;"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
                         <div class="section-heading" style="margin-top: 0vh; display: block;">Hathaway Home-Page #4
                         <p class="additional-text" style="margin-top: 0vh; display: block;">Some cool info or hashtags #4</p></div>
                     </div>
                 </div>
                 <div class="section section-5">
-                    <div class="left-part" style="margin-top: 0; transition-delay: 0.6s;"></div>
+                    <div class="left-part"></div>
                     <div class="content">
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.4s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.5s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 1s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.9s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.6s;"></div>
-                        <div class="bg-part" style="margin-top: 0vh; transition-delay: 0.7s;"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
+                        <div class="bg-part"></div>
                         <div class="section-heading" style="margin-top: 0vh; display: block;">Hathaway Home-Page #5
                             <p class="additional-text" style="margin-top: 0vh; display: block;">Some cool info or hashtags #5</p></div>
 
                     </div>
                 </div>
             </div>
-            <h2 class="scroll-down"><a href="javascript:;">Scroll down</a></h2>
+            <h2 class="scroll-down"><a href="#nav">Scroll down</a></h2>
         </div>
 
 </div>
@@ -172,11 +172,11 @@
     <div>
     <div id="nav">
         <ul>
-            <li class="select"><a href="#w-about">About</a></li>
-            <li><a href="#b-io">Resume</a></li>
-            <li><a href="#do">Services</a></li>
-            <li><a href="#skill">Skills</a></li>
-            <li><a href="#cont">Contact</a></li>
+            <li class="select"><a href="#w-about">关于我</a></li>
+            <li><a href="#b-io">简历</a></li>
+            <li><a href="#do">作品</a></li>
+            <li><a href="#skill">技能</a></li>
+            <li><a href="#cont">联系我</a></li>
         </ul>
     </div>
     <div id="part1">
@@ -185,7 +185,7 @@
             <div width="80vh" id="l-part2">
                 <div>
 
-                    <h3 id="l-title">ABOUT</h3>
+                    <h3 id="l-title">关于我</h3>
                     <div class="c-line"></div>
                     <div class="d-line"></div>
                 </div>
@@ -211,10 +211,10 @@
                 <div id="content">
                     <div id="img-small"><img src="img/smallme.jpg" alt=""/></div>
                     <div id="business-card">
-                        <h2 class="letter">Hi,I'm Hathaway</h2>
-                        <h3 class="letter"> I am from Harbin University of Science and Technology</h3>
-                        <h4 class="letter">I love reading, love art, love the natural freedom, often use the holiday to walk around and open my horizons, broaden their horizons, with their hearts to the perception of life. </h4>
-                        <h4 class="letter">In the hope of life nourishment, and constantly improve themselves, have the ability to grow, do a simple and elegant woman.</h4>
+                        <h2 class="letter">Hi,我是张茉，英文名字Hathaway</h2>
+                        <h3 class="letter">来自辽宁的一枚妹子</h3>
+                        <h4 class="letter">我喜欢阅读，热爱艺术，享受自然的乐趣，经常利用假期四处走走，开阔眼界，用心感受生活。 </h4>
+                        <h4 class="letter">在生活中吸收营养，不断提高自己，努力成长，做一个优雅而不凡的女孩。</h4>
                         <h3 class="letter">My motto is:</h3>
                         <h3 class="letter">Do what you say,say what you do</h3>
                     </div>
@@ -222,20 +222,20 @@
 
                 <div id="data">
                     <div class="s-l-part">
-                        <h3>&nbsp;SOME FACTS</h3>
+                        <h3>Some Numbers</h3>
                     </div>
                     <div class="s-r-part">
                         <div class="data-1">
-                            <h3>30</h3>
-                            <div>&nbsp;FINISHED PROJECTS</div>
+                            <h3>5h</h3>
+                            <div>Learning</div>
                         </div>
                         <div class="data-1">
-                            <h3>10</h3>
-                            <div>&nbsp;HAPPY CUSTOMERS</div>
+                            <h3>3h</h3>
+                            <div>Write code</div>
                         </div>
                         <div class="data-1">
-                            <h3>50</h3>
-                            <div>WORKING HOURS</div>
+                            <h3>2h</h3>
+                            <div>Watching</div>
                         </div>
                     </div>
                 </div>
@@ -251,17 +251,21 @@
                     <div class="e-line"></div>
                 </div>
                 <div id="bio">
-                    <h3>Familiar with creative design and web design related software tools.</h3>
-                    <h3>Experienced in website design. Familiar with web based design.</h3>
-                    <h3>Ability to manage, communicate, communicate and team work.</h3>
-                    <h3>Familiar with online shopping platform, rich online shopping experience.</h3>
-                    <h3>Professional quality, solid foundation, cheerful personality, good at communication.</h3>
-                    <h3>Good at learning, trying new things and able to work under pressure.</h3>
-                    <h3> Mastering Photoshop, able to work efficiently.</h3>
-                    <h3>Planned work,</h3>
-                    <h3>Conscientious and responsible,</h3>
-                    <h3>Have team work spirit.</h3>
-                    <h3>Strive to reach the task within the shortest possible time.</h3>
+                    <p><i class="iconfont icon-gongwenbao"></i>&nbsp;2015-2019</p>
+                    <h3>就读于哈尔滨理工大学 软件与微电子专业</h3>
+                    <h3>在大学期间积极参加学校组织的各种活动</h3>
+                    <h3>获得过校级奖学金、校级优秀团员、英语CET-4证书</h3>
+                    <p><i class="iconfont icon-gongwenbao"></i>&nbsp;16-至今</p>
+                    <h3>学习html css js 等前端知识</h3>
+                    <h3>熟悉网页设计，有一定的网站设计经验。</h3>
+                    <p><i class="iconfont icon-gongwenbao"></i>&nbsp;17-至今</p>
+                    <h3>开始学习bootstrap sass webpack ...</h3>
+                    <h3>对于vue 和php node.js都有系统的学习</h3>
+                    <p><i class="iconfont icon-gongwenbao"></i>&nbsp;自我评价</p>
+                    <h3>具备管理、沟通、沟通和团队合作的能力。</h3>
+                    <h3>有专业素质，基础扎实，性格开朗，善于沟通。</h3>
+                    <h3>善于学习，能尝试新事物，能在压力下工作。</h3>
+                    <h3>对于工作我从来都是认真的</h3>
 
                 </div>
             </div>
@@ -451,7 +455,6 @@
                     <h3 class="about">CONTACT</h3>
                     <div class="e-line"></div>
                 </div>
-
                 <footer class="viselem visfooter">
                      <div class="container">
                         <div class="row">
@@ -517,7 +520,7 @@
                     </div>
                     <div class="y-advice">
                         <h2>留下你的建议：</h2>
-                        <br><br>
+                        <br>
                         <form action="">
                             姓名：<input type="text">&nbsp;&nbsp;&nbsp;&nbsp;
                             邮箱：<input type="email">
@@ -530,7 +533,7 @@
                         </form>
                     </div>
                 </footer>
-
+                <div class="r-block"></div>
             </div>
             <!-- *       part5 end       *-->
         </div>
